--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>Ashik Sanyo</title>    <!-- Change it your name  --> .
+    <title>Maanas Sridhar</title>    <!-- Change it your name  --> .
   </head>
   <body class="light" id="top">
     <header class="header center">
       <h3>
-        <a href="" class="link"  
-          >{AS}. <!--insert your initials here --></a
+        <a href="www.linkedin.com/in/
+        maanas-s-ab0822236
+        " class="link"  
+          >{MS}. <!--insert your initials here --></a
         >
       </h3> <!--use the linkedIn or any link in above href-->
 
@@ -69,13 +71,13 @@
     <main>
       <!-- About -->
       <div class="about center">
-        <h1>Hi, I am <span class="about__name">Ashik Sanyo.</span></h1>
-        <h2 class="about__role">Aspiring DataScientist</h2>
+        <h1>Hi, I am <span class="about__name">Maanas Sridhar</span></h1>
+        <h2 class="about__role">Aspiring Software Developer & Web Developer</h2>
         <p class="about__desc"> <!-- Edit the About make sure you add your degree!-->
-          I'm a Tech geek living in Bangalore, India. I love to solve problems and build things. Also an Ex-TCSer and presently a Post grad Data Science student at Christ University!
+            A Bengaluru born passionate tech enthusiast with a knack for solving complex problems and crafting innovative digital solutions.Im also a BCA Student of Christ University !
         </p> <!-- about you -->
         <br>
-        <a href="mailto:ashiksanyo01@gmail.com">Mail: ashisanyo01@gmail.com </a><p> Contact: +91 63624 86106</p>  <!--Change it to your mail id and contact no-->
+        <a href="mailto:Maanas.sridhar@bca.christuniversity.in.">Mail: Maanas.sridhar@bca.christuniversity.in</a><p> Contact: +91 99015 58675</p>  <!--Change it to your mail id and contact no-->
       </br>
       
 
@@ -85,7 +87,7 @@
           </a>
 
           <a
-            href="https://github.com/ashiksanyo10" target="_blank"
+            href="https://github.com/MaanasSridhar12" target="_blank"
             aria-label="github"
             class="link link--icon"
           >
@@ -93,7 +95,9 @@
           </a> <!-- Github profile Link-->
 
           <a
-            href="https://linkedin.com/in/ashiksanyo" target="_blank"  
+            href="www.linkedin.com/in/
+            maanas-s-ab0822236" 
+            target="_blank"  
             aria-label="linkedin"
             class="link link--icon"
           > 
@@ -108,13 +112,13 @@
 
         <div class="projects__grid">
           <div class="project">
-            <h3>Ukraine Russia War Data Analysis</h3> <!--Peoject Title -->
+            <h3>HeartsDelight</h3> <!--Peoject Title -->
             <p class="project__description">
-              2022 Ukraine Russia War Exploratory Data Analysis, Analysis was done on the day 167 of the war
+              An innovative way of food ordering for the faculty of Christ University.
             </p> <!--Project description-->
             <ul class="project__stack">
-              <li class="project__stack-item">Python</li>
-              <li class="project__stack-item">Excel</li>
+              <li class="project__stack-item">HTML/CSS/li>
+              <li class="project__stack-item">JS</li>
               <li class="project__stack-item">Plotly</li>
             </ul>
 
